# fikrah-metrics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
fikrah_metrics/: __init__.py  cli.py  display.py  metrics.py  stripe_client.py
