[project]
name = "fikrah-metrics"
version = "0.1.0"
description = "SaaS metrics from your Stripe account — ARR, MRR, NRR, churn, runway, burn rate. One command."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Hadi Hijazi", email = "team@bloq-ai.net" },
]
keywords = ["saas", "metrics", "stripe", "arr", "mrr", "nrr", "churn", "runway", "finops", "fikrah"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "stripe>=8.0.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
fikrah-metrics = "fikrah_metrics.cli:main"

[project.urls]
Homepage = "https://fikrah.io"
Repository = "https://github.com/DoubleH10/fikrah-metrics"
Issues = "https://github.com/DoubleH10/fikrah-metrics/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
